# anki-decks

./: .envrc  .gitignore  .markdownlint.jsonc  README.md  flake.nix  pyproject.toml  wiki.md
De-Ru/: De-Ru.apkg  De-Ru.txt  de-ru.md  deck.csv
De-Ru-Word-Combinations/: README.md  ankiweb-description.html  deck.apkg
De-Ru-phrases/: De-Ru-phrases.apkg  README.md  de-ru-phrases.md  deck.csv
En-Ru/: En-Ru.apkg  README.md  deck.csv  en-ru.md
En-Ru-Picture/: README.md  en-ru-picture.txt
En-Ru-Picture/card-templates/: ru-en-front.html
En-Ru-Picture/words/: words.py
Es-Ru/: Es-Ru.apkg  Es-Ru.txt  README.md  es-ru.md
Fr-Ru/: Fr-Ru.apkg  Fr-Ru.txt  deck.csv  fr-ru.md
Uz-Ru/: Uz-Ru.txt  big.apkg  middle.apkg  uz-ru.md
Uz-Ru/2K/: deck.csv
Uz-Ru/9K/: ankiweb-description.html
blog/: create-a-deck.md  custom-deck.md
custom/: .gitignore
custom/de/: deck.csv  readme.md  song_lyrics.md  song_lyrics_list.csv  song_lyrics_list.md  song_verbs.md  song_verbs_no_duplicates.md  song_words_list.csv
custom/de/script/: lib.py  (+2 more)
en-ru-pictures/: .gitignore  ankiweb-description.html
en-ru-pictures/card-templates/: en-ru-back.html  en-ru-front.html  ru-en-back.html  styling.css
en-ru-pictures/words/: main.py
multiplication-and-division/card-templates/: back.html  front.html  styling.css
stories/: README.md  app.py  check.py
stories/card-templates/: back.html  front.html  styling.css
stories/data/: translations.csv
word-combinations/De-Ru/: README.md
word-combinations/Uz-Ru/: deck.csv
word-combinations/de/: combined.csv
word-combinations/de-ru/: deck.csv
(+186 files in other folders)
