[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2.240514"
bs4 = "^0.0.2"
selenium = "^4.25.0"
pydub = "^0.25.1"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
jinja2 = "^3.1.5"
spacy = "^3.8.4"
scipy = "^1.15.1"
iso639-lang = "^2.6.0"
aiohttp = "^3.12.2"
ruamel-yaml = "^0.18.11"
tiktoken = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
mypy = "^1.11.1"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
